After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732100 - Picking a specific persona/account from context menu doesn't work
Picking a specific persona/account from context menu doesn't work
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
: 729829 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-06-23 12:25 UTC by Guillaume Desmottes
Modified: 2014-06-23 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
individual-menu: rename menu_item_new functions (17.00 KB, patch)
2014-06-23 13:36 UTC, Guillaume Desmottes
committed Details | Review
individual-menu: factor out some item_new() code (9.50 KB, patch)
2014-06-23 13:36 UTC, Guillaume Desmottes
committed Details | Review
individual-menu: use the proper persona in submenus (10.09 KB, patch)
2014-06-23 13:36 UTC, Guillaume Desmottes
committed Details | Review
individual-menu: remove 'block' item from personas sub menus (1.58 KB, patch)
2014-06-23 13:36 UTC, Guillaume Desmottes
committed Details | Review
individual-menu: stop creating single_individual (1.96 KB, patch)
2014-06-23 13:36 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2014-06-23 12:25:57 UTC
The contact list context menu allowing user to choose a specific account or persona to perform a specific action doesn't work. Empathy always uses the same account.
Comment 1 Guillaume Desmottes 2014-06-23 13:36:32 UTC
Created attachment 279002 [details] [review]
individual-menu: rename menu_item_new functions

- Remove the namespace prefix for static functions
- Add 'individual' suffix
Comment 2 Guillaume Desmottes 2014-06-23 13:36:36 UTC
Created attachment 279003 [details] [review]
individual-menu: factor out some item_new() code
Comment 3 Guillaume Desmottes 2014-06-23 13:36:40 UTC
Created attachment 279004 [details] [review]
individual-menu: use the proper persona in submenus

'single_individual' uses to be a FolksIndivudal containing a single persona
(the one from the submenu) ensuring that operations (chat, call, etc) were
performed on this very persona.

But we broke this in 0909d1f884c4542553d98b18e7622664d2a02169 by replacing the
empathy_create_individual_from_tp_contact() call by
empathy_ensure_individual_from_tp_contact() as the same individuals (the one
will all the personas) was now used in all the sub menus.

Fixing this by introducing 'contact' variant of the menu_item_new methods
which is always cleaner.
Comment 4 Guillaume Desmottes 2014-06-23 13:36:45 UTC
Created attachment 279005 [details] [review]
individual-menu: remove 'block' item from personas sub menus

Blocking a specific persona from an individual is a very uncommon operation.
Either you want to block the full individual or the personas shouldn't be
linked together.
There is not much point cluttering the menu with it.
Comment 5 Guillaume Desmottes 2014-06-23 13:36:49 UTC
Created attachment 279006 [details] [review]
individual-menu: stop creating single_individual

This code was always pretty hacky and created loads of nasty bugs so I'm glad
to get rid of it.
Comment 6 Xavier Claessens 2014-06-23 15:17:07 UTC
+1
Comment 7 Guillaume Desmottes 2014-06-23 15:18:35 UTC
Attachment 279002 [details] pushed as 8a91bd6 - individual-menu: rename menu_item_new functions
Attachment 279003 [details] pushed as ad1b40b - individual-menu: factor out some item_new() code
Attachment 279004 [details] pushed as 1f92304 - individual-menu: use the proper persona in submenus
Attachment 279005 [details] pushed as a2a7b6e - individual-menu: remove 'block' item from personas sub menus
Attachment 279006 [details] pushed as 8ac7209 - individual-menu: stop creating single_individual
Comment 8 Sebastian Keller 2014-06-23 15:38:50 UTC
*** Bug 729829 has been marked as a duplicate of this bug. ***