individual-menu: rename menu_item_new functions

- Remove the namespace prefix for static functions
- Add 'individual' suffix

https://bugzilla.gnome.org/show_bug.cgi?id=732100